@@ -1616,13 +1616,13 @@ static void DrawSlider(Menu_t *menu, int item, int width, int slot)
 
 void M_ChangeDetail(int choice)
 {
-    choice = 0;
-    detailLevel = 1 - detailLevel;
+	choice = 0;
+	detailLevel = 1 - detailLevel;
 
-    R_SetViewSize (screenblocks, detailLevel);
+	R_SetViewSize (screenblocks, detailLevel);
 
-    if (!detailLevel)
-	players[consoleplayer].message = DETAILHI;
-    else
-	players[consoleplayer].message = DETAILLO;
+	if (!detailLevel)
+		P_SetMessage(&players[consoleplayer], "HIGH DETAIL", true);
+	else
+		P_SetMessage(&players[consoleplayer], "LOW DETAIL", true);
 }
